# realtimeplot

./: README.md  setup.cfg
realtimeplot/: __init__.py  client.py  sender.py  server.py
