[metadata]
name = realtimeplot
version = attr: realtimeplot.__version__
author = DocGarbanzo
#author_email = your.email@example.com
description = Realtimeplot plots realtime data into a scrolling display \
    utilising matplotlib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/your-repo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib

[options.entry_points]
console_scripts =
    realtimeplotter = realtimeplot.server:main
